java8 Stream实际场景应用，对数据进行排序。